# website

./: .gitignore  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
agent/: README.md  __init__.py  example_usage.py  math_agent_v0.py  pyproject.toml  test.ipynb
agent/backend/: __init__.py  main.py  routers.py  run.py
agent/backend/data/exercises/: exercise_04fd9d41.json  exercise_09c35474.json  exercise_0fb20e36.json  exercise_12dbfd83.json  exercise_1dc978d8.json  exercise_224f1524.json  exercise_322ef419.json  exercise_3b205b21.json  exercise_419a6bb1.json  exercise_49a40b99.json  exercise_4a679536.json  exercise_4f3486e6.json  exercise_52e7db6f.json  exercise_573ac405.json  exercise_59daa0d0.json  exercise_61d29318.json  exercise_620a9132.json  exercise_63dc4449.json  exercise_782a51f6.json  exercise_829016e3.json  exercise_8e4659e7.json  exercise_9190f7a4.json  exercise_96e014f6.json  exercise_98b2e1cf.json  exercise_a3956733.json  exercise_a68ef29b.json  exercise_acea7e78.json  exercise_aedfe3e8.json  exercise_b6bad628.json  exercise_c08e05c9.json  exercise_c0ec3ce7.json  exercise_d3bc2368.json  exercise_e071513e.json  exercise_e81f05cf.json  exercise_f211f357.json  exercise_f57814ec.json  exercise_f5a81019.json  exercise_f6d5a10e.json  (+2 more)
agent/backend/models/: exercise.py
agent/backend/routers/: exercises.py
agent/backend/services/: __init__.py  ai_service.py  storage_service.py
agent/test/: __init__.py  conftest.py  demo_mocked_exercise.py  run_tests.py  test_ai_service.py  test_api_endpoints.py  test_models.py  test_storage_service.py
(+32 files in other folders)
