[project]
name = "math_agent"
version = "0.1.0"
description = "Website for handwritting math "
authors = [
    { name = "Matthias Elbaz", email = "matthiasintegral2025@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "jupyter",
    "scipy>=1.16.0",
    "statsmodels>=0.14.5",
    "scikit-learn>=1.7.1",
    "plotly>=6.2.0",
    "ipywidgets>=8.0.0",
    "jupyterlab>=4.0.0",
    "xgboost>=1.6.0",
    "langchain-core>=0.2.0",
    "langchain>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=0.2.0",
    "langchain-chroma>=0.1.2",
    "langchain-text-splitters>=0.2.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.0.0",
    "PyPDF2>=3.0.0",
    "pillow>=11.3.0",
    "fastapi>=0.116.1",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "fastapi[testing]>=0.116.1",
    "python-multipart>=0.0.20",
]

[tool.setuptools.packages.find]
where = ["."]

